Fix reply button on mobile devices

--- a/src/public/css/include/post.less
+++ b/src/public/css/include/post.less
@@ -147,6 +147,8 @@
 }
 
 .reply-to-thread-button {
+  display: inline-block;
+  margin: 2px 0px;
   text-decoration: none;
   padding: 4px;
   font-size: 1.2em;
